Creación del metodo que permite la eliminación del registro en la base de datos

--- a/DPO2_U3_A2_RARP/src/interfaces/EmpleadosBajas.form
+++ b/DPO2_U3_A2_RARP/src/interfaces/EmpleadosBajas.form
@@ -183,8 +183,8 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="paneldatos2" min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                           <Component id="jPanel7" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -192,7 +192,7 @@
                           <Component id="jLabel1" min="-2" pref="150" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace min="0" pref="24" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -207,7 +207,7 @@
                           <Component id="jPanel7" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Component id="paneldatos" max="32767" attributes="0"/>
-                      <Component id="paneldatos2" max="32767" attributes="0"/>
+                      <Component id="paneldatos2" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace pref="22" max="32767" attributes="0"/>
               </Group>
