--- a/DP02_ACD_RARP/src/interfaces/ConsultaPersonal.form
+++ b/DP02_ACD_RARP/src/interfaces/ConsultaPersonal.form
@@ -366,8 +366,8 @@
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="labelNombre" max="32767" attributes="0"/>
-                                      <Component id="labelApellidoPaterno" max="32767" attributes="0"/>
-                                      <Component id="labelApellidoMaterno" alignment="1" max="32767" attributes="0"/>
+                                      <Component id="labelApellido" max="32767" attributes="0"/>
+                                      <Component id="labelNumeroEmpleado" alignment="1" max="32767" attributes="0"/>
                                       <Component id="labelFechaNacimiento" alignment="0" max="32767" attributes="0"/>
                                       <Component id="laberCurp" alignment="0" pref="177" max="32767" attributes="0"/>
                                   </Group>
@@ -404,12 +404,12 @@
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="lbApellidoPaterno1" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="labelApellidoPaterno" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="labelApellido" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="lbApellidoMaterno1" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="labelApellidoMaterno" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="labelNumeroEmpleado" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -463,7 +463,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Tahoma" size="18" style="0"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Apellido Paterno:"/>
+                    <Property name="text" type="java.lang.String" value="Apellidos: "/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="lbApellidoMaterno1">
@@ -471,7 +471,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Tahoma" size="18" style="0"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Apellido Materno:"/>
+                    <Property name="text" type="java.lang.String" value="N&#xfa;mero empleado"/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jleInsumo">
@@ -529,14 +529,14 @@
                     </Property>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="labelApellidoPaterno">
+                <Component class="javax.swing.JLabel" name="labelApellido">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Tahoma" size="18" style="0"/>
                     </Property>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="labelApellidoMaterno">
+                <Component class="javax.swing.JLabel" name="labelNumeroEmpleado">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Tahoma" size="18" style="0"/>
