--- a/DP02_ACD_RARP/src/interfaces/EmpleadosBajas.form
+++ b/DP02_ACD_RARP/src/interfaces/EmpleadosBajas.form
@@ -521,6 +521,9 @@
                       <Font name="Tahoma" size="18" style="0"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtNumeroEmpleadoKeyTyped"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
