--- a/DP02_ACD_RARP/src/interfaces/InventarioAltas.form
+++ b/DP02_ACD_RARP/src/interfaces/InventarioAltas.form
@@ -357,6 +357,9 @@
                       <Font name="Tahoma" size="18" style="0"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtCodigoKeyTyped"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
@@ -407,6 +410,9 @@
                       <Font name="Tahoma" size="18" style="0"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtSucursalKeyTyped"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
@@ -507,6 +513,9 @@
                       <Font name="Tahoma" size="18" style="0"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtExistenciaKeyTyped"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
