--- a/DP02_ACD_RARP/src/interfaces/InventarioBajas.form
+++ b/DP02_ACD_RARP/src/interfaces/InventarioBajas.form
@@ -386,6 +386,9 @@
                       <Font name="Tahoma" size="18" style="0"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtCodigoKeyTyped"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
@@ -436,6 +439,9 @@
                       <Font name="Tahoma" size="18" style="0"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtSucursalKeyTyped"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
