Selección para no permitir que se maximize las ventanas

--- a/DP02_ACD_RARP/src/interfaces/ConsultaInsumos.form
+++ b/DP02_ACD_RARP/src/interfaces/ConsultaInsumos.form
@@ -331,6 +331,9 @@
                       <Font name="Tahoma" size="18" style="0"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtCodigoKeyTyped"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
@@ -528,6 +531,9 @@
                       <Font name="Tahoma" size="18" style="0"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtSucursalKeyTyped"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
