--- a/HTML/LeccionDos/css/estilos.css
+++ b/HTML/LeccionDos/css/estilos.css
@@ -4,10 +4,16 @@ h1 {
 p {
   color: white;
   background-color: crimson;
+  /*Padding el margen que rodea al elemento*/
+  padding: 15px;
+  /*Borde que sigue del padding*/
+  border: 25px solid powderblue;
+  /*Margen que rodea al margino*/
+  margin: 50px;
 }
-a{
-    background-color:black;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: yellow;
-    font-size: 25px;
+a {
+  background-color: black;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  color: yellow;
+  font-size: 25px;
 }
