Uso de margenes y padding de los diferentes elementos como la forma en representarlos y usarlos2

--- a/HTML/LeccionDos/css/estilos.css
+++ b/HTML/LeccionDos/css/estilos.css
@@ -8,8 +8,16 @@ p {
   padding: 15px;
   /*Borde que sigue del padding*/
   border: 25px solid powderblue;
-  /*Margen que rodea al margino*/
-  margin: 50px;
+  /*Margen para cada uno de los lados del elemento*/
+  /*
+  margin-top: 40px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 20px;
+  */
+  /*Otra forma de espresarlo es*/
+  margin: auto 50px;
+  text-align: center;
 }
 a {
   background-color: black;
